2009-04-03  Ken Werner  <ken.werner@de.ibm.com>

	* spu/Makefile.in: Add new files.
	* spu/times.c: New File.
	* spu/getitimer.c: Likewise.
	* spu/setitimer.c: Likewise.

2009-04-03  Ken Werner  <ken.werner@de.ibm.com>

	* spu/Makefile.in: Add linux_getpid.o and linux_gettid.o.
	* spu/linux_getpid.c: New file.
	* spu/linux_gettid.c: New file.

2009-04-03  Ken Werner  <ken.werner@de.ibm.com>

	* spu/crt0.S (_start): Place spu_id in the first agument register.

2009-03-16  Jeff Johnston  <jjohnstn@redhat.com>

	* m32r/m32r-stub.c: Replace with one from newer version of gdb.

2009-01-07  Ben Elliston  <bje@au.ibm.com>

	* Makefile.in (all): Add `+' to the command line so that the
	command is always treated as $(MAKE).
	* doc/Makefile.in (datarootdir): Define.

2008-12-17  Jon Beniston <jon@beniston.com>

	* README: Add description of lm32 directory.
	* configure.in: Add lm32 target.        
	* configure: Regenerated.
	* libnosys/configure.in: Add lm32 target.
	* libnosys/configure: Regenerated.
	* lm32: New directory.
	* lm32/aclocal.m4: New file.
	* lm32/Makefile.in: New file.
	* lm32/configure.in: New file.
	* lm32/configure: New file.
	* lm32/crt0.S: New file.
	* lm32/isatty.c: New file.
	* lm32/scall.S: New file.
	* lm32/sim.ld: New file.

2008-12-11  Ken Werner  <ken.werner@de.ibm.com>

	* spu/crt0.S: Call __monstartup if profiling is enabled.
	* spu/Makefile.in: Add gcrt1.o gcrt2.o.

2008-12-06  Adam Nemet  <anemet@caviumnetworks.com>

	* mips/idt32.ld: Set arch to mips:isa32r2 from mips:isa32.  Update
	comment.

2008-12-05  Adam Nemet  <anemet@caviumnetworks.com>

	* mips/idt64.ld: Set arch to mips:isa64r2 from mips:isa64.  Update
	comment.

2008-11-20  Ken Werner  <ken.werner@de.ibm.com>
            Patrick Mansfield  <patmans@us.ibm.com>
            Joel Schopp   <jschopp@austin.ibm.com>

	* spu/Makefile.in: Add new files.
	* spu/jsre.h: Add JSRE_MMAP, JSRE_MREMAP, JSRE_MSYNC and
	JSRE_MUNMAP opcodes.
	* spu/mmap_eaddr.c: New File.